added cm units to optics

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@ var questions = [
     n1: [1,9], n2: [1,9]
   },{
     tags: ["geometricoptics"],
-    strs: ["If an object is placed {o} centimeters in front of a converging lens of focal length {f}, what is the image distance with Cartesian sign convention?"],
+    strs: ["If an object is placed {o} centimeters in front of a converging lens of focal length {f}cm, what is the image distance with Cartesian sign convention?"],
     ans: function(o, f){return 1/(1/f - 1/o);},
     o: [1,10], f: [1,10]
   },{
     tags: ["geometricoptics"],
-    strs: ["How far in front of a converging lens of focal length {f} is an object if it produces an image {i} centimeters behind it?"],
+    strs: ["How far in front of a converging lens of focal length {f}cm is an object if it produces an image {i} centimeters behind it?"],
     ans: function(i, f){return 1/(1/f - 1/i);},
     i: [1,10], f: [1,10]
   },{
